--- a/Source/Common/Projects/NTDirectX/Camera.cls
+++ b/Source/Common/Projects/NTDirectX/Camera.cls
@@ -29,17 +29,21 @@ End Property
 Public Function ToString() As String
 
     If Not Camera.Planet Is Nothing Then
-        ToString = ToString & Include.URLEncode("Set Camera.Planet = Planets(""" & Camera.Planet.Key & """)") & vbCrLf
+        If Planets.Exists(Camera.Planet.Key) Then
+            ToString = ToString & Include.URLEncode("Set Camera.Planet = Planets(""" & Camera.Planet.Key & """)") & vbCrLf
+        End If
     End If
     If Not Camera.Player Is Nothing Then
-        ToString = ToString & Include.URLEncode("Set Camera.Player = Molecules(""" & Camera.Player.Key & """)") & vbCrLf
-        ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & Camera.Player.Origin.ToString & """") & vbCrLf
-        ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & Camera.Player.Rotate.ToString & """") & vbCrLf
+        If Molecules.Exists(Camera.Player.Key) Then
+            ToString = ToString & Include.URLEncode("Set Camera.Player = Molecules(""" & Camera.Player.Key & """)") & vbCrLf
+            ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & Camera.Player.Origin.ToString & """") & vbCrLf
+            ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & Camera.Player.Rotate.ToString & """") & vbCrLf
+        End If
     End If
-    
+
     ToString = ToString & Include.URLEncode("Camera.Color = " & Camera.Color) & vbCrLf
     ToString = ToString & Include.URLEncode("Camera.Serialize = True") & vbCrLf
-    
+
     ToString = "  <Camera>" & vbCrLf & ToString & vbCrLf & "</Camera>" & vbCrLf
 End Function
 
